fix(foxy-theme-overrides): increase max-height of logo for better visibility on various devices

--- a/foxy-styles/foxy-theme-overrides.css
+++ b/foxy-styles/foxy-theme-overrides.css
@@ -139,7 +139,7 @@
   #fc .fc-logo__image,
   #fc #fc-logo--receipt {
     max-width: 180px;
-    max-height: 70px;
+    max-height: 90px;
   }
 }
 
